v4.2.5 (work in progress)
     * ...

v4.2.4 2025-07-24
     * Add B4C_sg166_BoronCarbide.ncmat, representing the crystal structure of
       ideal B12C3 boron-carbide (github issues #162 and #207). Dynamics are
       approximated with Debye temperatures.
     * Add BO3H3_sg2_BoricAcid.ncmat, representing ortho boric acid. This
       includes both crystal structure and phonon DOS curves (github issue
       #284).
     * Update ncmat2endf functionality to work with endf-parserpy
       0.14.x. However, since ENDF output changes slightly in endf-parserpy
       0.14.x and endf-parserpy conda-forge pkgs are not ready yet, NCrystal's
       dependency on endf-parserpy is for now pinned to <0.14.
     * Guard file globbing on Windows against false matching short 8.3 format
       filenames (i.e. *.ncm should never match *.ncmat)..
     * Fix type-casting issue in RawStrData::calcCheckSum which caused obscure
       and hard to track down bus errors or seg-faults on macOS Intel
       (issue seen in macos-13 runners on GitHub).
     * Update RawStrData move operators to avoid dangling pointers in moved-from
       objects. This is safer, but is not actually believed to have caused any
       issues since the pointers in question were not accessed in the class
       destructor.
     * Fix MSCV compilation warning related to memchr usage (seen on
       windows-2025 runners on GitHub).
     * Improve debugging efforts by adding a new simple C++ based material
       loading test and increase verbosity and buffer flushing of some tests.

v4.2.2 2025-07-03
     * Support the unit "mu" (micron) in cfg-string length specifications.
     * Fix issue where MatCfg::get_ucnmode_str returned internal StrView
       class. This now returns std::string. This change is not considered ABI
       breaking, since no-one could have used the method without also including
       internal header files.
     * Fix stability of tests.

v4.2.0 2025-06-11