@@ -110,7 +110,5 @@ dependencies:
   pybind11:
     min_version: "2.11.0"
   endf-parserpy:
-    #min_version: "0.13.0"
-    #Avoid 0.14.x until conda pkgs are ready (needs fixes)
-    max_version: "0.13.99"
+    min_version: "0.14.3"
     import_check: 'endf_parserpy'
