@@ -11,7 +11,7 @@ dependencies:
   - python
   - ase >=3.23.0
   - cppcheck
-  - endf-parserpy <=0.13.99
+  - endf-parserpy >=0.14.3
   - gemmi >=0.6.1
   - matplotlib >=3.6.0
   - mpmath >=1.3.0
