@@ -1,7 +1,7 @@
 PyYAML>=6.0.0
 ase>=3.23.0
 cppcheck
-endf-parserpy<=0.13.99
+endf-parserpy>=0.14.3
 gemmi>=0.6.1
 matplotlib>=3.6.0
 mpmath>=1.3.0
