@@ -59,6 +59,6 @@ wheel.py-api = "py3" # as close to "noarch" as possible (ABI3)
 wheel.platlib = false # Wheels are pure, CMake is only used to invoke generate.py
 
 [project.optional-dependencies]
-all = ['ase>=3.23.0', 'endf-parserpy<=0.13.99', 'gemmi>=0.6.1',
+all = ['ase>=3.23.0', 'endf-parserpy>=0.14.3', 'gemmi>=0.6.1',
        'matplotlib>=3.6.0', 'mpmath>=1.3.0', 'numpy>=1.22',
        'spglib>=2.1.0']
