@@ -160,7 +160,7 @@ endf> 5.630535-2 5.726731-2 5.766564-2 5.801308-2 5.895461-2 5.956147-2 999 7  2
 endf> 5.982677-2 6.030685-2 6.051027-2 6.106318-2 6.128612-2 6.175565-2 999 7  2   67
 endf> 6.218158-2 6.236484-2 6.258417-2 6.290280-2 6.308969-2 6.325955-2 999 7  2   68
 endf> 6.329578-2 6.362528-2 6.375300-2 6.386558-2 6.401929-2 6.411860-2 999 7  2   69
-endf> <<<SNIPPED 6930 LINES, MD5=0857597b0d360f4be64fc3e85864befb>>>
+endf> <<<SNIPPED 6930 LINES, MD5=ac6bbe449aaefc0c3e3fad3936ee082a>>>
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6909
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6910
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6911
@@ -169,7 +169,7 @@ endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6914
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6915
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6916
-endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6917
+endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0                       999 7  4 6917
 endf> 2.931500+2 7.700000+1          1          0          1        100 999 7  4 6918
 endf>        100          4                                             999 7  4 6919
 endf> 3.00000-51 0.000000+0 3.00000-11 0.000000+0 6.000000-3 0.000000+0 999 7  4 6920
@@ -223,7 +223,7 @@ endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6968
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6969
 endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6970
-endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 0.000000+0 999 7  4 6971
+endf> 0.000000+0 0.000000+0 0.000000+0 0.000000+0                       999 7  4 6971
 endf> 0.000000+0 0.000000+0          0          0          1          2 999 7  4 6972
 endf>          2          2                                             999 7  4 6973
 endf> 2.931500+2 3.202258+2 3.500000+2 3.728392+2                       999 7  4 6974
