@@ -1,4 +1,5 @@
 v4.2.5 (work in progress)
+     * Update to use endf-parserpy 0.14.
      * ...
 
 v4.2.4 2025-07-24
